--- a/ModLoader/ModLoader.csproj
+++ b/ModLoader/ModLoader.csproj
@@ -74,11 +74,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Config.cs" />
-	<Compile Include="ConfigManager.cs" />
+    <Compile Include="Configuration.cs" />
     <Compile Include="GameObserver.cs" />
+    <Compile Include="Key.cs" />
     <Compile Include="KeySettings.cs" />
     <Compile Include="Console.cs" />
+    <Compile Include="Keys.cs" />
     <Compile Include="Mod.cs" />
     <Compile Include="ModLoader.cs" />
     <Compile Include="ModLoaderStats.cs" />
